# openai-cpp

./: CMakeLists.txt
examples/: 13-chat-stream.cpp  CMakeLists.txt
include/openai/: openai.hpp
